[project]
name = "computational-biophysics-spr-25"
version = "0.1.0"
description = "Repository for the Computational Biophysics course at IIT Kharagpur"
authors = ["Prasanna Paithankar <paithankarprasanna@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio>=1.7.1",
    "toml>=0.10.2",
]
